--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.4.5",
-    "vite": "^5.2.0"
+    "vite": "^5.2.0",
+    "vite-plugin-compression": "^0.5.1"
   }
 }
