--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
+    "@types/node-fetch": "^2.6.11",
     "ts-node": "^10.9.2"
   }
 }
