--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@supabase/supabase-js": "^2.44.4",
     "@types/express": "^4.17.21",
     "@types/node": "^20.14.2",
     "cors": "^2.8.5",
